create user table

--- a/holamundo.html
+++ b/holamundo.html
@@ -9,5 +9,14 @@
 <body>
     <h1>hola mundo</h1>
     <button type="submit">Button</button>
+    <div>
+        <table>
+            <th>
+                <tr></tr>
+                <tr></tr>
+                <tr></tr>
+            </th>
+        </table>
+    </div>
 </body>
 </html>
