--- a/holamundo.html
+++ b/holamundo.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>hola mundo</h1>
     <button type="submit">Button</button>
@@ -18,5 +20,11 @@
             </th>
         </table>
     </div>
+    <div>
+        <form action="" method="get">
+            <input type="text" name="" id="">
+        </form>
+    </div>
 </body>
+
 </html>
