--- a/holamundo.html
+++ b/holamundo.html
@@ -9,5 +9,6 @@
 <body>
     <h1>hola mundo</h1>
     <button type="submit">Button</button>
+    <button type="submit">Button</button>
 </body>
 </html>
