--- a/holamundo.html
+++ b/holamundo.html
@@ -15,9 +15,9 @@
     <div>
         <table>
             <th>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
+                <tr>Karina</tr>
+                <tr>Cazun</tr>
+                <tr>Cristian</tr>
             </th>
         </table>
     </div>
